test_suite/tests/ui/identifier/field_struct.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
#[serde(field_identifier)]
struct S;

fn main() {}
